--- a/MaintenanceDashboard.Client/MaintenanceDashboard.Client.csproj
+++ b/MaintenanceDashboard.Client/MaintenanceDashboard.Client.csproj
@@ -379,6 +379,12 @@
     <Resource Include="Image\Logo.jpg" />
     <Resource Include="Image\Zenek.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\Zebra_Logo_W.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\plc.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
