--- a/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
+++ b/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
@@ -77,6 +77,10 @@
     <Compile Include="Migrations\202012021111297_UpdatedDecriptionInterventionProperty.designer.cs">
       <DependentUpon>202012021111297_UpdatedDecriptionInterventionProperty.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202012030957041_UpdatedPlanedPlannedRepairDateProperty.cs" />
+    <Compile Include="Migrations\202012030957041_UpdatedPlanedPlannedRepairDateProperty.designer.cs">
+      <DependentUpon>202012030957041_UpdatedPlanedPlannedRepairDateProperty.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Employee.cs" />
     <Compile Include="API\EmployeeContext.cs" />
     <Compile Include="Models\ReceivedPaddle.cs" />
@@ -320,6 +324,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202012021111297_UpdatedDecriptionInterventionProperty.resx">
       <DependentUpon>202012021111297_UpdatedDecriptionInterventionProperty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012030957041_UpdatedPlanedPlannedRepairDateProperty.resx">
+      <DependentUpon>202012030957041_UpdatedPlanedPlannedRepairDateProperty.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
