--- a/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
+++ b/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
@@ -54,6 +54,7 @@
     <Compile Include="API\PreventionContext.cs" />
     <Compile Include="API\ReceivedPaddleContext.cs" />
     <Compile Include="API\ReceivedThermostatContext.cs" />
+    <Compile Include="API\RetrievedEquipmentContext.cs" />
     <Compile Include="API\SpendedPaddleContext.cs" />
     <Compile Include="API\SpendedThermostatContext.cs" />
     <Compile Include="API\ThermostatContext.cs" />
@@ -81,6 +82,10 @@
     <Compile Include="Migrations\202012030957041_UpdatedPlanedPlannedRepairDateProperty.designer.cs">
       <DependentUpon>202012030957041_UpdatedPlanedPlannedRepairDateProperty.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101060907045_AddedRetrievedEquipmentTable.cs" />
+    <Compile Include="Migrations\202101060907045_AddedRetrievedEquipmentTable.designer.cs">
+      <DependentUpon>202101060907045_AddedRetrievedEquipmentTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Employee.cs" />
     <Compile Include="API\EmployeeContext.cs" />
     <Compile Include="Models\ReceivedPaddle.cs" />
@@ -88,6 +93,7 @@
     <Compile Include="API\PaddleContext.cs" />
     <Compile Include="Data\DataContext.cs" />
     <Compile Include="Models\ReceivedThermostat.cs" />
+    <Compile Include="Models\RetrievedEquipment.cs" />
     <Compile Include="Models\SelectedComponent.cs" />
     <Compile Include="Models\SpendedPaddle.cs" />
     <Compile Include="Models\SpendedThermostat.cs" />
@@ -327,6 +333,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202012030957041_UpdatedPlanedPlannedRepairDateProperty.resx">
       <DependentUpon>202012030957041_UpdatedPlanedPlannedRepairDateProperty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101060907045_AddedRetrievedEquipmentTable.resx">
+      <DependentUpon>202101060907045_AddedRetrievedEquipmentTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
