--- a/MaintenanceDashbord.Common/MaintenanceDashboard.Common.csproj
+++ b/MaintenanceDashbord.Common/MaintenanceDashboard.Common.csproj
@@ -108,8 +108,8 @@
     <Compile Include="BarcodeNumber.cs" />
     <Compile Include="ObservableObject.cs" />
     <Compile Include="PlcService\ConnectionStates.cs" />
-    <Compile Include="PlcService\eCmmsPlcHelper.cs" />
-    <Compile Include="PlcService\S7PlcHelper.cs" />
+    <Compile Include="PlcService\smartWorkshopPlcHelper.cs" />
+    <Compile Include="PlcService\BaseS7PlcHelper.cs" />
     <Compile Include="PlcService\Sharp7.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
